tests/neg-custom-args/captures/capt-depfun.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt-depfun.scala:11:43 ----------------------------------
11 |  val dc: ((Str^{y, z}) => Str^{y, z}) = ac(g()) // error
   |                                         ^^^^^^^
   |Found:    Str^{} => Str^{y, z}
   |Required: Str^{y, z} =>² Str^{y, z}
   |
   |Note that capability y is not included in capture set {}.
   |
   |where:    =>  refers to a root capability created in value dc when instantiating method apply's type (x: C^): Str^{x} =>³ Str^{x}
   |          =>² refers to a root capability in the type of value dc
   |
   | longer explanation available when compiling with `-explain`
